--- a/app/src/main/res/layout/item_voice.xml
+++ b/app/src/main/res/layout/item_voice.xml
@@ -38,6 +38,15 @@
                 android:layout_below="@+id/text_phone_number"
                 android:layout_marginLeft="@dimen/activity_vertical_margin"
                 android:layout_toRightOf="@+id/image_avatar" />
+
+            <ImageView
+                android:id="@+id/image_item_voice_status"
+                style="@style/ViewCommon"
+                android:src="@drawable/ic_call_incoming_holo_dark"
+                android:layout_below="@+id/text_time"
+                android:layout_marginLeft="@dimen/activity_vertical_margin"
+                android:layout_toRightOf="@+id/image_avatar"
+                />
         </RelativeLayout>
 
         <RelativeLayout
