--- a/app/src/main/res/layout/fragment_voice.xml
+++ b/app/src/main/res/layout/fragment_voice.xml
@@ -3,13 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/tool_bar" />
 
     <com.ethan.morephone.widget.MultiSwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tool_bar">
+        android:layout_height="wrap_content">
 
 
         <android.support.v7.widget.RecyclerView
