--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,6 +25,7 @@
 
         <item
             android:id="@+id/nav_share"
+            android:actionProviderClass="android.widget.ShareActionProvider"
             android:icon="@drawable/ic_share_black_24dp"
             android:title="Share" />
     </group>
