--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -69,5 +69,6 @@
     <dimen name="margin_in_call_text">4dp</dimen>
     <dimen name="margin_in_call_text_time">24dp</dimen>
     <dimen name="margin__bottom_in_call_text_hide_dialpad">24dp</dimen>
+    <dimen name="width_divider_short">50dp</dimen>
 
 </resources>
