--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -280,4 +280,19 @@
         <item name="android:layout_centerHorizontal">true</item>
     </style>
 
+    <style name="TextSettingDisplay" parent="ViewCommon">
+        <item name="android:textColor">@color/colorText</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginLeft">@dimen/activity_main_margin</item>
+        <item name="android:layout_marginRight">@dimen/activity_main_margin</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Display1</item>
+        <item name="android:layout_marginTop">@dimen/text_display_margin_top</item>
+    </style>
+
+    <style name="TextSettingItem" parent="TextSettingDisplay">
+        <item name="android:layout_height">72dp</item>
+        <item name="android:background">?android:attr/selectableItemBackground</item>
+        <item name="android:clickable">true</item>
+    </style>
+
 </resources>
