--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -98,4 +98,8 @@
     <color name="refresh_progress_1">#e91e63</color>
     <color name="refresh_progress_2">#00b0ff</color>
     <color name="refresh_progress_3">#3f51b5</color>
+
+    <color name="background_tab_pressed">#6633B5E5</color>
+
+
 </resources>
