--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -11,24 +11,17 @@
         <include layout="@layout/tool_bar" />
 
         <com.ethan.morephone.widget.MyTextView
-            android:id="@+id/text_setting_title"
-            style="@style/TextDisplay"
+            android:id="@+id/text_setting_phone_number"
+            style="@style/TextSettingDisplay"
             android:layout_below="@+id/tool_bar"
             android:layout_marginTop="?attr/actionBarSize"
-            android:text="@string/app_name" />
-
-        <com.ethan.morephone.widget.MyTextView
-            android:id="@+id/text_setting_version"
-            style="@style/TextSettingDisplay"
-            android:layout_below="@+id/text_setting_title"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:text="@string/setting_version" />
 
         <View
             android:id="@+id/view_divider_1"
             style="@style/Divider"
             android:layout_width="@dimen/width_divider_short"
-            android:layout_below="@+id/text_setting_version"
+            android:layout_below="@+id/text_setting_phone_number"
             android:layout_marginTop="@dimen/activity_main_margin" />
 
 
@@ -58,29 +51,126 @@
             android:layout_below="@+id/relative_setting_friendly_name" />
 
         <RelativeLayout
-            android:id="@+id/relative_setting_configure_sms_forwarding"
-            style="@style/TextSettingItem"
+            android:id="@+id/relative_setting_enable_record"
+            style="@style/RelativeSetting"
             android:layout_below="@+id/view_divider_1a">
 
             <com.ethan.morephone.widget.MyTextView
-                android:id="@+id/text_setting_folder"
-                style="@style/ViewCommon"
-                android:text="@string/setting_configure_sms_forwarding"
-                android:textSize="18sp" />
+                android:id="@+id/text_setting_enable_record"
+                style="@style/TextTorrentSettingItem"
+                android:layout_toLeftOf="@+id/switch_setting_enable_record"
+                android:text="@string/setting_enable_record" />
 
             <com.ethan.morephone.widget.MyTextView
-                android:id="@+id/text_setting_folder_set"
-                style="@style/ViewCommon"
+                style="@style/TextTorrentSettingSummary"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/text_setting_folder"
-                android:layout_marginTop="4dp"
-                android:text="SMS" />
+                android:layout_below="@+id/text_setting_enable_record"
+                android:layout_toLeftOf="@+id/switch_setting_enable_record"
+                android:text="@string/setting_enable_record_summary" />
+
+            <android.support.v7.widget.SwitchCompat
+                android:id="@+id/switch_setting_enable_record"
+                style="@style/SwitchSettingItem" />
+
         </RelativeLayout>
 
         <View
             android:id="@+id/view_divider_1b"
             style="@style/Divider"
+            android:layout_below="@+id/relative_setting_enable_record" />
+
+        <RelativeLayout
+            android:id="@+id/relative_setting_enable_notification"
+            style="@style/RelativeSetting"
+            android:layout_below="@+id/view_divider_1b">
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_setting_enable_notification"
+                style="@style/TextTorrentSettingItem"
+                android:layout_toLeftOf="@+id/switch_setting_enable_notification"
+                android:text="@string/setting_enable_notification" />
+
+            <com.ethan.morephone.widget.MyTextView
+                style="@style/TextTorrentSettingSummary"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/text_setting_enable_notification"
+                android:layout_toLeftOf="@+id/switch_setting_enable_notification"
+                android:text="@string/setting_enable_notification_summary" />
+
+            <android.support.v7.widget.SwitchCompat
+                android:id="@+id/switch_setting_enable_notification"
+                style="@style/SwitchSettingItem" />
+
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/view_divider_1c"
+            style="@style/Divider"
+            android:layout_below="@+id/relative_setting_enable_notification" />
+
+
+        <RelativeLayout
+            android:id="@+id/relative_setting_configure_sms_forwarding"
+            style="@style/RelativeSetting"
+            android:layout_below="@+id/view_divider_1c">
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_setting_configure_sms_forwarding"
+                style="@style/TextTorrentSettingItem"
+                android:layout_toLeftOf="@+id/switch_ip_filtering"
+                android:text="@string/setting_configure_sms_forwarding" />
+
+            <android.support.v7.widget.SwitchCompat
+                android:id="@+id/switch_ip_filtering"
+                style="@style/SwitchSettingItem" />
+
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/view_divider_1k"
+            style="@style/Divider"
             android:layout_below="@+id/relative_setting_configure_sms_forwarding" />
+
+        <RelativeLayout
+            android:id="@+id/relative_setting_phone"
+            style="@style/RelativeSetting"
+            android:layout_below="@+id/view_divider_1k">
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_setting_phone"
+                style="@style/TextTorrentSettingItem"
+                android:text="@string/setting_phone" />
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_setting_phone_summary"
+                style="@style/TextTorrentSettingSummary"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/text_setting_phone"/>
+
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/view_divider_1l"
+            style="@style/Divider"
+            android:layout_below="@+id/relative_setting_phone" />
+
+        <RelativeLayout
+            android:id="@+id/relative_setting_email"
+            style="@style/RelativeSetting"
+            android:layout_below="@+id/view_divider_1l">
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_setting_email"
+                style="@style/TextTorrentSettingItem"
+                android:text="@string/setting_email" />
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_setting_email_summary"
+                style="@style/TextTorrentSettingSummary"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/text_setting_email"/>
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
