--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -289,7 +289,15 @@
         <item name="android:layout_marginTop">@dimen/text_display_margin_top</item>
     </style>
 
-    <style name="TextSettingItem" parent="TextSettingDisplay">
+    <style name="TextSetting" parent="ViewMatch">
+        <item name="android:paddingLeft">@dimen/activity_main_margin</item>
+        <item name="android:paddingRight">@dimen/activity_main_margin</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="TextSettingItem" parent="TextSetting">
         <item name="android:layout_height">72dp</item>
         <item name="android:background">?android:attr/selectableItemBackground</item>
         <item name="android:clickable">true</item>
@@ -324,5 +332,34 @@
         <item name="android:textStyle">normal</item>
         <item name="android:textSize">14sp</item>
         <item name="android:layout_centerHorizontal">true</item>
+    </style>
+
+    <style name="RelativeSetting" parent="ViewMatch">
+        <item name="android:paddingLeft">@dimen/activity_main_margin</item>
+        <item name="android:paddingRight">@dimen/activity_main_margin</item>
+        <item name="android:background">?android:attr/selectableItemBackground</item>
+        <item name="android:clickable">true</item>
+        <item name="android:paddingTop">@dimen/activity_vertical_margin</item>
+        <item name="android:paddingBottom">@dimen/activity_vertical_margin</item>
+    </style>
+
+    <style name="SwitchSettingItem" parent="ViewCommon">
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:layout_alignParentRight">true</item>
+    </style>
+
+    <style name="TextTorrentSettingItem" parent="ViewMatch">
+        <item name="android:layout_marginRight">@dimen/activity_main_margin</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="TextTorrentSettingSummary" parent="ViewMatch">
+        <item name="android:layout_marginRight">@dimen/activity_main_margin</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:layout_marginTop">8dp</item>
     </style>
 </resources>
