--- a/app/src/main/res/layout/item_voice.xml
+++ b/app/src/main/res/layout/item_voice.xml
@@ -7,15 +7,19 @@
     android:layout_marginLeft="@dimen/activity_vertical_margin"
     android:layout_marginRight="@dimen/activity_vertical_margin">
 
-    <com.ethan.morephone.widget.ExpandableLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/expandable_layout"
+    <!--<com.ethan.morephone.widget.ExpandableLayout xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--android:id="@+id/expandable_layout"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:background="?android:attr/selectableItemBackground"-->
+    <!--android:paddingBottom="@dimen/item_voice_space"-->
+    <!--android:paddingTop="@dimen/item_voice_space">-->
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?android:attr/selectableItemBackground"
-        android:paddingBottom="@dimen/item_voice_space"
-        android:paddingTop="@dimen/item_voice_space">
+        android:layout_height="wrap_content">
 
         <RelativeLayout
+            android:id="@+id/relative_item_voice_above"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -42,31 +46,34 @@
             <ImageView
                 android:id="@+id/image_item_voice_status"
                 style="@style/ViewCommon"
-                android:src="@drawable/ic_call_incoming_holo_dark"
                 android:layout_below="@+id/text_time"
                 android:layout_marginLeft="@dimen/activity_vertical_margin"
                 android:layout_toRightOf="@+id/image_avatar"
-                />
+                android:src="@drawable/ic_call_incoming_holo_dark" />
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/relative_expand"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/text_time"
-            android:layout_marginTop="@dimen/activity_main_margin"
-            app:canExpand="true">
+            android:layout_below="@+id/relative_item_voice_above"
+            android:layout_marginTop="@dimen/activity_main_margin">
 
-            <com.ethan.morephone.widget.progress.DotProgressBar xmlns:custom="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/progress_bar_item_voice"
-                android:layout_width="50dp"
-                android:layout_height="11dp"
-                android:visibility="gone"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/activity_horizontal_margin"
-                custom:amount="3"
-                custom:endColor="@color/green_400"
-                custom:startColor="@color/green_700" />
+            <RelativeLayout
+                android:id="@+id/relative_item_voice_progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/seek_bar_item_voice"
+                android:layout_centerHorizontal="true">
+
+                <com.ethan.morephone.widget.progress.DotProgressBar xmlns:custom="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/progress_bar_item_voice"
+                    android:layout_width="50dp"
+                    android:layout_height="11dp"
+                    custom:amount="3"
+                    custom:endColor="@color/green_400"
+                    custom:startColor="@color/green_700" />
+            </RelativeLayout>
 
             <com.ethan.morephone.widget.MyTextView
                 android:id="@+id/text_item_voice_duration"
@@ -131,6 +138,6 @@
                 android:text="Send Message" />
 
         </RelativeLayout>
-    </com.ethan.morephone.widget.ExpandableLayout>
-
+        <!--</com.ethan.morephone.widget.ExpandableLayout>-->
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
