--- a/app/src/main/res/layout/fragment_usage.xml
+++ b/app/src/main/res/layout/fragment_usage.xml
@@ -1,35 +1,210 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?><!--<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:background="@android:color/white"--><!--android:fitsSystemWindows="true">-->
+
+<!--<android.support.design.widget.AppBarLayout--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:theme="@style/AppTheme.AppBarOverlay">-->
+
+<!--<com.ethan.morephone.widget.NavigationTabStrip--><!--android:id="@+id/tab_strip"--><!--android:layout_width="match_parent"--><!--android:layout_height="?attr/actionBarSize"--><!--android:background="@android:color/white"--><!--android:layout_gravity="center"--><!--app:nts_active_color="@color/colorBackgroundBlue"--><!--app:nts_color="@color/colorBackgroundBlue"--><!--app:nts_corners_radius="1dp"--><!--app:nts_inactive_color="@color/colorText"--><!--app:nts_titles="@array/usage_titles"/>-->
+
+<!--</android.support.design.widget.AppBarLayout>-->
+
+<!--<android.support.v4.view.ViewPager--><!--android:id="@+id/view_pager"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--app:layout_behavior="@string/appbar_scrolling_view_behavior"/>-->
+
+<!--</android.support.design.widget.CoordinatorLayout>-->
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/white"
-    android:fitsSystemWindows="true">
+    android:layout_height="wrap_content">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+    <RelativeLayout style="@style/ViewMatch">
 
-        <com.ethan.morephone.widget.NavigationTabStrip
-            android:id="@+id/tab_strip"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@android:color/white"
-            android:layout_gravity="center"
-            app:nts_active_color="@color/colorBackgroundBlue"
-            app:nts_color="@color/colorBackgroundBlue"
-            app:nts_corners_radius="1dp"
-            app:nts_inactive_color="@color/colorText"
-            app:nts_titles="@array/usage_titles"/>
+        <com.ethan.morephone.widget.MyTextView
+            android:id="@+id/text_usage_phone_number"
+            style="@style/TextSettingDisplay"
+            android:layout_marginTop="?attr/actionBarSize" />
 
-    </android.support.design.widget.AppBarLayout>
+        <View
+            android:id="@+id/view_divider_1"
+            style="@style/Divider"
+            android:layout_width="@dimen/width_divider_short"
+            android:layout_below="@+id/text_usage_phone_number"
+            android:layout_marginTop="@dimen/activity_main_margin" />
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        <com.ethan.morephone.widget.MyTextView
+            android:id="@+id/text_usage_message"
+            style="@style/TextSettingCategory"
+            android:layout_below="@+id/view_divider_1"
+            android:text="@string/usage_message_label" />
 
-</android.support.design.widget.CoordinatorLayout>
+        <View
+            android:id="@+id/view_divider_2"
+            style="@style/Divider"
+            android:layout_width="@dimen/width_divider_short"
+            android:layout_below="@+id/text_usage_message"
+            android:layout_marginTop="@dimen/activity_main_margin" />
+
+        <RelativeLayout
+            android:id="@+id/relative_usage_message_total"
+            style="@style/RelativeSetting"
+            android:layout_below="@+id/view_divider_2">
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_usage_message_total"
+                style="@style/TextUsageTitle"
+                android:text="@string/usage_message_total" />
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_usage_message_total_set"
+                style="@style/TextUsageValueSpent"
+                android:layout_below="@+id/text_usage_message_total" />
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_usage_message_total_spent"
+                style="@style/TextUsageValue"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/text_usage_message_total" />
+
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/view_divider_3"
+            style="@style/Divider"
+            android:layout_below="@+id/relative_usage_message_total" />
+
+        <RelativeLayout
+            android:id="@+id/relative_usage_message_incoming"
+            style="@style/RelativeSetting"
+            android:layout_below="@+id/view_divider_3">
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_usage_message_incoming"
+                style="@style/TextUsageTitle"
+                android:text="@string/usage_message_incoming" />
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_usage_message_incoming_set"
+                style="@style/TextUsageValue" />
+
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/view_divider_4"
+            style="@style/Divider"
+            android:layout_below="@+id/relative_usage_message_incoming" />
+
+        <RelativeLayout
+            android:id="@+id/relative_usage_message_outgoing"
+            style="@style/RelativeSetting"
+            android:layout_below="@+id/view_divider_4">
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_usage_message_outgoing"
+                style="@style/TextUsageTitle"
+                android:text="@string/usage_message_outgoing" />
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_usage_message_outgoing_set"
+                style="@style/TextUsageValue" />
+
+        </RelativeLayout>
+
+        <com.ethan.morephone.widget.MyTextView
+            android:id="@+id/text_usage_voice"
+            style="@style/TextSettingCategory"
+            android:layout_below="@+id/relative_usage_message_outgoing"
+            android:layout_marginTop="@dimen/activity_main_margin"
+            android:text="@string/usage_voice_label" />
+
+        <View
+            android:id="@+id/view_divider_5"
+            style="@style/Divider"
+            android:layout_width="@dimen/width_divider_short"
+            android:layout_below="@+id/text_usage_voice"
+            android:layout_marginTop="@dimen/activity_main_margin" />
+
+        <RelativeLayout
+            android:id="@+id/relative_usage_voice_total"
+            style="@style/RelativeSetting"
+            android:layout_below="@+id/view_divider_5">
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_usage_voice_total"
+                style="@style/TextUsageTitle"
+                android:text="@string/usage_voice_total" />
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_usage_voice_total_set"
+                style="@style/TextUsageValueSpent"
+                android:layout_below="@+id/text_usage_voice_total" />
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_usage_voice_total_spent"
+                style="@style/TextUsageValue"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/text_usage_voice_total" />
+
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/view_divider_6"
+            style="@style/Divider"
+            android:layout_below="@+id/relative_usage_voice_total" />
+
+        <RelativeLayout
+            android:id="@+id/relative_usage_voice_incoming"
+            style="@style/RelativeSetting"
+            android:layout_below="@+id/view_divider_6">
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_usage_voice_incoming"
+                style="@style/TextUsageTitle"
+                android:text="@string/usage_voice_incoming" />
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_usage_voice_incoming_set"
+                style="@style/TextUsageValue" />
+
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/view_divider_7"
+            style="@style/Divider"
+            android:layout_below="@+id/relative_usage_voice_incoming" />
+
+        <RelativeLayout
+            android:id="@+id/relative_usage_voice_outgoing"
+            style="@style/RelativeSetting"
+            android:layout_below="@+id/view_divider_7">
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_usage_voice_outgoing"
+                style="@style/TextUsageTitle"
+                android:text="@string/usage_voice_outgoing" />
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_usage_voice_outgoing_set"
+                style="@style/TextUsageValue" />
+
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/view_divider_8"
+            style="@style/Divider"
+            android:layout_below="@+id/relative_usage_voice_outgoing" />
+
+        <RelativeLayout
+            android:id="@+id/relative_usage_voice_missing"
+            style="@style/RelativeSetting"
+            android:layout_below="@+id/view_divider_8">
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_usage_voice_missing"
+                style="@style/TextUsageTitle"
+                android:text="@string/usage_voice_missing" />
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_usage_voice_missing_set"
+                style="@style/TextUsageValue" />
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+</ScrollView>
