--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -390,4 +390,20 @@
         <item name="android:textColor">@color/colorText</item>
         <item name="android:textSize">18sp</item>
     </style>
+
+    <style name="TextPaymentDisplay" parent="ViewCommon">
+        <item name="android:textColor">@color/colorText</item>
+        <item name="android:layout_marginLeft">@dimen/activity_main_margin</item>
+        <item name="android:layout_marginRight">@dimen/activity_main_margin</item>
+        <item name="android:layout_marginTop">@dimen/activity_main_margin</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Title</item>
+    </style>
+
+    <style name="TextPaymentItem" parent="TextSetting">
+        <item name="android:layout_height">72dp</item>
+        <item name="android:background">?android:attr/selectableItemBackground</item>
+        <item name="android:clickable">true</item>
+    </style>
+
+
 </resources>
