--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,14 +4,14 @@
     <group android:checkableBehavior="single">
 
         <item
-            android:id="@+id/nav_numbers"
-            android:icon="@drawable/ic_settings_phone_black_24dp"
-            android:title="My numbers" />
-
-        <item
             android:id="@+id/nav_buy_number"
             android:icon="@drawable/ic_add_black_24dp"
             android:title="Buy a phone" />
+
+        <item
+            android:id="@+id/nav_card"
+            android:icon="@drawable/ic_credit_card_black_24dp"
+            android:title="Add Card" />
 
         <item
             android:id="@+id/nav_setting"
